# gt-bot

./: .env.dev  .env.prod  .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
gt-bot-data/list/: charaalias.json  charainfo.csv  charaname.json  charaserver.json  foodHistory.csv  foodMenu.csv
gt/plugins/: gacha.py  group.py  roulette.py  setu.py  whatToEat.py
gt/utilities/: chara.py  config.py  gachautil.py  resource.py  util.py
